Working with database and userlist display

--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
   "author": "Vikas Kumar",
   "license": "ISC",
   "dependencies": {
+    "JSON": "^1.0.0",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
+    "hashmap": "^2.3.0",
     "json": "^9.0.6",
     "mysql": "^2.15.0"
   }
