Added and update campaign list with edit and add form

--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "JSON": "^1.0.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "hashmap": "^2.3.0",
     "json": "^9.0.6",
     "mysql": "^2.15.0"
