--- a/panel/package.json
+++ b/panel/package.json
@@ -29,8 +29,8 @@
     "angular-calendar": "^0.22.1",
     "chartist": "^0.11.0",
     "core-js": "^2.4.1",
+    "d3": "^4.8.0",
     "hammerjs": "^2.0.8",
-    "d3": "^4.8.0",  
     "jquery": "^3.2.1",
     "moment": "^2.20.0",
     "ng-chartist": "^1.1.1",
@@ -38,6 +38,7 @@
     "ng2-dragula": "^1.5.0",
     "ng2-file-upload": "^1.3.0",
     "ng2-validation": "^4.2.0",
+    "ng2-webstorage": "^2.0.0",
     "ngx-perfect-scrollbar": "^5.0.0",
     "ngx-quill": "^2.0.4",
     "rxjs": "^5.5.2",
