--- a/panel/package.json
+++ b/panel/package.json
@@ -21,6 +21,7 @@
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/material": "^5.0.0",
+    "@angular/material-moment-adapter": "^5.2.4",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
