Updated list user
Updated the list users and campaign

--- a/panel/package.json
+++ b/panel/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.4.6",
     "@angular/animations": "^5.0.0",
     "@angular/cdk": "^5.0.0",
     "@angular/common": "^5.0.0",
