--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,16 @@
     "JSON": "^1.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "csv": "^0.3.7",
+    "date-and-time": "^0.6.2",
+    "delay": "^2.0.0",
     "express": "^4.16.3",
+    "express-generator": "^4.16.0",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "hashmap": "^2.3.0",
     "json": "^9.0.6",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "socket.io": "^2.0.4"
   }
