--- a/panel/package.json
+++ b/panel/package.json
@@ -29,6 +29,7 @@
     "@swimlane/ngx-charts": "^7.0.1",
     "@swimlane/ngx-datatable": "^11.1.5",
     "angular-calendar": "^0.22.1",
+    "angular-file-uploader": "^4.0.10",
     "chartist": "^0.11.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
