--- a/panel/package.json
+++ b/panel/package.json
@@ -40,6 +40,7 @@
     "ng2-charts": "^1.6.0",
     "ng2-dragula": "^1.5.0",
     "ng2-file-upload": "^1.3.0",
+    "ng2-google-charts": "^3.4.0",
     "ng2-validation": "^4.2.0",
     "ng2-webstorage": "^2.0.0",
     "ngx-perfect-scrollbar": "^5.0.0",
